fixed clipboard button stylings on mobile

--- a/components/clipboard_button.module.scss
+++ b/components/clipboard_button.module.scss
@@ -27,7 +27,7 @@
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      align-items: stretch;
+      align-items: center;
 
       border: none;
       background-color: $active;
@@ -46,9 +46,12 @@
       }
 
       input {
+        width: 100%;
+        flex: 1;
+        padding: 0; // overwrite any system defaults
+
         border: none;
         outline: none;
-        flex: 1;
   
         color: $dim;
         background-color: transparent;
